Table "foods" {
  "id" int [pk, increment]
  "name" varchar
  "description" varchar
  "category" varchar
  "price" float
  "restaurant_id" integer
}

Table "restaurants" {
  "id" int [pk, increment]
  "name" varchar
  "description" varchar
  "rating" float
  "cnpj" varchar
  "phone" varchar
  "location" varchar
  "user_id" integer
}

Table "users" {
  "id" int [pk, increment]
  "name" varchar
  "email" varchar [unique]
  "password" varchar
  "role" integer
  "location" varchar
}

Table "orders" {
  "id" int [pk, increment]
  "created_at" timestamp
  "rating" float
  "user_id" integer
  "restaurant_id" integer
  "location" varchar
}

Table "order_items" {
  "quantity" integer
  "food_id" integer
  "order_id" integer

Indexes {
  (food_id, order_id) [pk]
}
}

Table "auth_tokens" {
  "token" varchar [pk]
  "user_id" integer
  "created_at" timestamp
}

Ref:"restaurants"."id" < "foods"."restaurant_id"

Ref:"users"."id" < "restaurants"."user_id"

Ref:"users"."id" < "orders"."user_id"

Ref:"restaurants"."id" < "orders"."restaurant_id"

Ref:"foods"."id" < "order_items"."food_id"

Ref:"orders"."id" < "order_items"."order_id"

Ref:"users"."id" < "auth_tokens"."user_id"
